# Lumalog

./: .gitignore  LICENSE  README.md  package.json  start.bat  start.sh
Mi-Fitness-Sync-main/: .gitignore  LICENSE  README.md  USAGE_CN.md  main.py  pyproject.toml  requirements.txt
Mi-Fitness-Sync-main/docs/: AGENTS.md  mi-fitness-activity-findings.md  mi-fitness-auth-findings.md  mi-fitness-fds-download-gaps.md  mi-fitness-fds-findings.md  mi-fitness-sync-upload-findings.md
Mi-Fitness-Sync-main/src/mi_fitness_sync/: __init__.py  __main__.py  config.py  exceptions.py  paths.py
Mi-Fitness-Sync-main/src/mi_fitness_sync/activity/: __init__.py  client.py  crypto.py  fds.py  formatting.py  models.py  region_mapping.py  transport.py  utils.py
Mi-Fitness-Sync-main/src/mi_fitness_sync/auth/: client.py  state.py  store.py
Mi-Fitness-Sync-main/src/mi_fitness_sync/cli/: app.py  (+1 more)
Mi-Fitness-Sync-main/tests/: conftest.py
Mi-Fitness-Sync-main/tests/activity/: test_client.py  test_fds.py  test_formatting.py  test_models.py  test_region_mapping.py  test_utils.py
Mi-Fitness-Sync-main/tests/auth/: test_client.py  test_store.py
Mi-Fitness-Sync-main/tests/cli/: test_app.py  test_speed_parser.py
Mi-Fitness-Sync-main/tests/export/: test_render.py  test_smoothing.py
Mi-Fitness-Sync-main/tests/fds/: __init__.py  support.py  test_cache.py  test_common.py  test_downloader.py  test_gps_records.py  test_recovery_rate.py  test_sport_records.py  test_sport_reports.py
Mi-Fitness-Sync-main/tests/strava/: test_auth.py  test_client.py  test_sport_mapping.py  test_store.py
(+58 files in other folders)
